# STS-Calculation

./: .gitignore  app.py  config.yaml  data.py  inference.py  model.py  pyproject.toml  requirements.txt
